k8s/applications/media/bookorbit/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: bookorbit-runtime
  namespace: media
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: bookorbit
  ingress:
    - fromEntities:
        - host
        - remote-node
        - ingress
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toFQDNs:
        - matchName: auth.smadja.dev
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: media
            app.kubernetes.io/name: postgresql
            app.kubernetes.io/instance: bookorbit-postgresql
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: bookorbit-postgresql
  namespace: media
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/instance: bookorbit-postgresql
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: media
            app.kubernetes.io/name: bookorbit
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
